finish prepare detail www
